--- a/calculator.html
+++ b/calculator.html
@@ -4,6 +4,7 @@
     <title>
       calculator
     </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
       body {
         background-color: black;
@@ -178,4 +179,5 @@
       }
     </script>
   </body>
+
 </html>
