--- a/calculator.html
+++ b/calculator.html
@@ -39,12 +39,12 @@
         box-sizing: border-box;
       }
 
-      .imageButton {
-        background-image: url('images/fotocalculator.jpg');
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        padding: 0;
+      .numberButton img {
+        width: 100%;
+        height: 100%;
+        border-radius: 40px;
+        object-fit: cover;
+        display: block;
       }
 
       .calculateButton {
@@ -171,7 +171,8 @@
     </p>
 
     <p>
-      <button class="numberButton imageButton">
+      <button class="numberButton" style="padding:0">
+        <img src="images/fotocalculator.jpg">
       </button>
 
       <button class="numberButton" onclick="
